test : 커버리지를 위한 테스트 코드 추가